--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,13 @@ android {
     }
     productFlavors {
     }
+    lintOptions {
+        //checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+        //chose to keep targetSdkVersion 23
+    }
 }
 
 dependencies {
