--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 07 13:30:21 EDT 2019
-sdk.dir=C\:\\Users\\Ed Silkworth\\AppData\\Local\\Android\\Sdk
+#Sun Aug 18 23:54:45 EDT 2019
+sdk.dir=C\:\\Users\\Ed\\AppData\\Local\\Android\\Sdk
